# CobolWorks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  actualizar_idiomas.sh  auto_traductor.py  ca_ES.ts  cobollexer.cpp  cobollexer.h  de_DE.ts  en_US.ts  eu_ES.ts  fr_FR.ts  gl_ES.ts  ia_traductor.py  instalador.iss  it_IT.ts  ja_JP.ts  main.cpp  mainwindow.cpp  mainwindow.h  pt_BR.ts  recursos.qrc  ru_RU.ts  zh_CN.ts
.github/workflows/: compilacion.yml
